--- a/package.json
+++ b/package.json
@@ -1,21 +1,38 @@
 {
-  "name": "simple-node-app",
+  "name": "github-tix-manager",
   "version": "1.0.0",
   "description": "Simple node app for helping myself quickly run node script locally.",
   "main": "app.js",
   "scripts": {
-    "build": "node app.js",
-    "start": "npm run build && run-p watch:**",
-    "watch:js": "chokidar 'app.js' -c 'npm run build'",
+    "app": "node dist/app.js",
+    "start": "npm run build && run-p app watch:**",
+    "build": "babel src/scripts --out-dir dist && shx cp -rf src/markdown-templates dist",
+    "watch:js": "chokidar 'src/scripts/**/*.js' -c 'run-s build app'",
+    "watch:templates": "chokidar 'src/markdown-templates/**/*.md' -c 'run-s build app'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Mavis Ou (https://github.com/mmmavis)",
   "license": "MIT",
   "dependencies": {
-    "npm-run-all": "^4.0.2"
+    "babel-preset-es2015": "^6.24.1",
+    "chalk": "^2.1.0",
+    "commander": "^2.11.0",
+    "csvtojson": "^1.1.7",
+    "google-spreadsheet": "^2.0.4",
+    "habitat": "^3.1.2",
+    "json-2-csv": "^2.1.1",
+    "jsonfile": "^3.0.1",
+    "moment": "^2.18.1",
+    "npm-run-all": "^4.0.2",
+    "prompt": "^1.0.0",
+    "request": "^2.81.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
     "chokidar": "^1.7.0",
-    "chokidar-cli": "^1.2.0"
+    "chokidar-cli": "^1.2.0",
+    "shx": "^0.2.2"
   }
 }
