--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
     "chokidar": "^1.7.0",
     "chokidar-cli": "^1.2.0",
     "shx": "^0.2.2"
+  },
+  "engines": {
+    "node": "^8.4.0",
+    "npm": "^5.3.0"
   }
 }
